fix: blurry status text on some browsers turns out, rendering engines don't like odd number width

--- a/assets/style.css
+++ b/assets/style.css
@@ -29,7 +29,7 @@
 
 .status {
     border: none;
-    width: 727px; /* no. */
+    width: 728px;
 }
 
 .invisible {
